fix features gap

--- a/styles/style.css
+++ b/styles/style.css
@@ -30,8 +30,6 @@ right:7.5%;
 
 }
 
-#nav-bar { 
-}
 
 .nav-link-list {
   display: flex;
@@ -70,9 +68,7 @@ main {
   margin-top: 15%;
 }
 
-.material-icons {
-  color: #c9995c;
-}
+
 
 #title {
   text-align: center;
@@ -93,17 +89,11 @@ main {
   border-color: #c9995c;
 }
 
-#newsletter {
-  text-align: center;
-  margin-bottom: 1%;
+
+.material-icons {
+  color: #c9995c;
 }
 
-#form {
-  margin: 0 auto;
-  display: flex;
-  flex-direction: column;
-  width: 25%;
-}
 
 .feature {
   font-family: "ABeeZee", sans-serif;
@@ -115,7 +105,7 @@ main {
 
   display: grid;
   grid-template-columns: 10% 90%;
-  grid-template-rows: repeat(3, 1fr);
+  grid-template-rows: (1fr, 1fr,  1fr);
   grid-template-areas:
     "icon1 header1"
     "icon2 header2"
@@ -123,6 +113,8 @@ main {
 
     grid-row-gap: 5%;
 }
+
+
 
 #video-div {
   padding-top: 117.53px;
@@ -197,6 +189,18 @@ main {
   width: 50%;
 }
 
+#newsletter {
+  text-align: center;
+  margin-bottom: 1%;
+}
+
+#form {
+  margin: 0 auto;
+  display: flex;
+  flex-direction: column;
+  width: 25%;
+}
+
 footer {
   background-color: #dddddd;
   margin: auto;
@@ -204,9 +208,7 @@ footer {
   margin-top: 2.5%;
 }
 
-.footlink {
-  /* add font style*/
-}
+
 
 @media only screen and (max-width: 576px) {
   /* header section*/
@@ -222,6 +224,7 @@ footer {
     font-family: "ABeeZee", sans-serif;
     justify-content: center;
     text-align: center;
+    
   }
 
   #header-img {
@@ -233,12 +236,19 @@ footer {
     width: 100%;
     height: auto;
     position: relative;
+    left: auto;
+    right: auto;
     
-    }
-
-  #nav-bar {
    
+  } 
+
+  #nav-bar{
   }
+    
+    
+  
+
+  
 
   .nav-link-list {
     list-style-type: none;
@@ -337,9 +347,7 @@ footer {
     margin-top: 2.5%;
   }
 
-  .footlink {
-    /* add font style*/
-  }
+ 
 
   /*form*/
 
@@ -382,11 +390,15 @@ footer {
   }
 
   
-  #nav-div {
+  #nav-div{
     width: 100%;
     height: auto;
     position: relative;
-  }
+    left: auto;
+    right: auto;
+    
+   
+  } 
 
   .nav-link-list {
     list-style-type: none;
@@ -423,20 +435,6 @@ footer {
     list-style-position: inside;
   }
 
-  /*.price-div {
-  text-align: center;
-  line-height: 2.2;
-  display: flex;
-  flex-direction: column;
-  border: #c9995c;
-  border-width: 10px;
-  border-style: double;
-  margin: auto;
-
-  width: 100%;
-  max-height: fit-content;
-  font-family: "ABeeZee", sans-serif;
-} */
 
   .price-div {
     text-align: center;
@@ -488,10 +486,6 @@ footer {
     margin-top: 2.5%;
   }
 
-  .footlink {
-    /* add font style*/
-  }
-
   /*form*/
 
   #newsletter {
@@ -519,29 +513,10 @@ footer {
     font-family: "ABeeZee", sans-serif;
   }
 
- /* #nav-bar {
-    width: 25%;
-    height: auto;
-    position: fixed;
-    top: 2.5%;
-    right: 2.5%;
+  .nav-link{
+    font-size: 30px;
   }
 
-  .nav-link-list {
-    list-style-type: none;
-    margin: 5%;
-  }
-
-  .nav-link {
-    font-weight: bold;
-    color: black;
-    float: left;
-    display: block;
-    text-align: center;
-    padding: 16px;
-    text-decoration: none;
-    font-size: 25px;
-  } */
 
   #header-img {
     height: auto;
@@ -601,7 +576,7 @@ footer {
 
     display: grid;
     grid-template-columns: 10% 90%;
-    grid-template-rows: 1/3fr 1/3fr 1/3fr;
+    grid-template-rows: repeat(3, 1fr);
     grid-template-areas:
       "icon1 header1"
       "icon2 header2"
@@ -690,7 +665,5 @@ footer {
     margin-top: 2.5%;
   }
 
-  .footlink {
-    /* add font style*/
-  }
+  
 }
